<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Runner</string>
    <string name="run">Run</string>
    <string name="challenge_yourself">Challenge Yourself</string>
    <string name="statistics_title">Want to know how you run?</string>
    <string name="action_settings">Settings</string>
    <string name="start_run">Start Run</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_run">Run!</string>
    <string name="per">per</string>
    <string name="stop">Stop!</string>
    <string name="average_speed">Average Speed</string>
    <string name="lap">Lap</string>
    <string name="start">Start!</string>
    <string name="resume">Resume</string>
    <string name="done">Done</string>
    <string name="laps">Laps</string>
    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="default_average_speed">00:00:00 per Km</string>
    <string name="default_portion_done" translatable="false">00.00 Km / 00.00 Km</string>
    <string name="default_lap_count">0 laps</string>
    <string name="alarm_dialog_message">You finished your run!</string>
    <string name="dialog_button_text">Done</string>
    <string name="watch_not_connected_toast">Pebble not connected! Ignore this if you don\'t have a Pebble</string>
    <string name="app_messages_not_supported_toast">Your version of Pebble is not supported. Please update</string>
    <string name="connection_not_completed_toast">Connection with Pebble could not be completed</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="total_distance_ran">You\'ve run</string>
    <string name="default_distance_ran">0 Km</string>
    <string name="run_list_title_text">Runs:</string>
    <string name="go_to_settings">Go to settings!</string>
    <string name="go_for_a_run">Go out for a run!</string>
    <string name="alarm_dialog_title">Done!</string>
    <string name="invalid">Invalid!</string>
    <string name="no_run_message">You have not run! Either go back or run</string>
    <string name="cant_run">You can\'t run yet</string>

</resources>