<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/total_distance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance_ran"
            android:textSize="@dimen/title_font_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/distance_ran_title_margin"/>
        <TextView
            android:id="@+id/total_distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold"
            android:text="@string/default_distance_ran"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:orientation="vertical"
        android:background="@color/middle_background">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/challenge_yourself"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/subtitle_font_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/bottom_background">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/subtitle_font_size"
            android:text="@string/statistics_title"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:onClick="openStatistics" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
