<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.foxtailgames.pocketrunner.StatisticsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/distance_ran_title"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_distance_ran"
            android:textSize="@dimen/title_font_size"
            android:layout_margin="@dimen/distance_ran_title_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/distance_ran"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_font_size"
            android:text="@string/default_distance_ran"/>

        <TextView
            android:id="@+id/run_list_title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_font_size"
            android:layout_margin="@dimen/run_list_title_margin"
            android:text="@string/run_list_title_text"/>
    </LinearLayout>


    <ListView
        android:id="@+id/runs_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/divider_line_color"
        android:dividerHeight="@dimen/thin_border_width"
        android:background="@drawable/thin_border_background"/>

</LinearLayout>
